{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 25,
  "lineage": "f2b91752-6ab4-8d33-40b9-2bc087f6a7f7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "defult_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:vpc/vpc-038ca6ba4cc59dcf1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e27a20daa6baf4ae",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-043755924df433901",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038ca6ba4cc59dcf1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1209280b767185e",
            "owner_id": "057454686230",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:network-acl/acl-020e81cae32338c83",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-020e81cae32338c83",
            "ingress": [],
            "owner_id": "057454686230",
            "subnet_ids": [
              "subnet-02b830da4f588d886",
              "subnet-03d7a1aa3560ccf37",
              "subnet-052ff1be8e3671781",
              "subnet-059a070808cbc5353",
              "subnet-0bbd8fd227ffc4be6",
              "subnet-0e7b3ed59670f12a0"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.example",
            "data.aws_vpc.defult_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-217265303",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-020e81cae32338c83",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 1,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "baz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3176852006",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-020e81cae32338c83",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 2,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bar",
            "data.aws_subnet_ids.example",
            "data.aws_vpc.defult_vpc"
          ]
        }
      ]
    }
  ]
}